--- a/src/app/components/dynamicForm/dynamic-form.component.html
+++ b/src/app/components/dynamicForm/dynamic-form.component.html
@@ -1,10 +1,10 @@
 <div>
     <form [formGroup]="dynamicForm">
         <div *ngFor="let question of questions" class="form-row">
-            <app-question [question]="question" [form]="form"></app-question>
+            <app-question [question]="question" [dynamicForm]="dynamicForm"></app-question>
         </div>
         <div class="form-row">
-            <button type="submit" [disabled]="!form.valid">Save</button>
+            <button type="submit" [disabled]="!dynamicForm.valid">Save</button>
         </div>
     </form>
 
